<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"

    tools:context="edu.orangecoastcollege.cs273.pdavis11.inandout.OrderActivity">

    <TextView
        android:id="@+id/orderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:paddingTop="@dimen/top_banner_padding"
        android:text="@string/order_banner"
        android:textColor="@color/black"
        android:textSize="@dimen/order_banner_text" />

    <TextView
        android:id="@+id/doubleDoubleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="end"
        android:layout_row="1"
        android:paddingTop="@dimen/top_banner_padding"
        android:text="@string/double_double"
        android:textSize="@dimen/order_text_size" />

    <TextView
        android:id="@+id/cheeseBurgerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="2"
        android:text="@string/cheese_burger"
        android:textSize="@dimen/order_text_size" />

    <TextView
        android:id="@+id/frenchFriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="3"
        android:text="@string/french_fries"
        android:textSize="@dimen/order_text_size" />

    <TextView
        android:id="@+id/shakesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="4"
        android:text="@string/shakes"
        android:textSize="@dimen/order_text_size" />

    <TextView
        android:id="@+id/fountainDrinksTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="5"
        android:text="@string/fountain_drinks"
        android:textSize="@dimen/order_text_size" />

    <TextView
        android:id="@+id/smallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="6"
        android:text="@string/small"
        android:textSize="@dimen/order_text_size" />

    <TextView
        android:id="@+id/mediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="7"
        android:text="@string/medium"
        android:textSize="@dimen/order_text_size" />

    <TextView
        android:id="@+id/largeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_row="8"
        android:text="@string/large"
        android:textSize="@dimen/order_text_size" />

    <EditText
        android:id="@+id/doubleDoubleEditText"
        android:layout_width="@dimen/edit_padding"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/cheeseBurgerEditText"
        android:layout_width="@dimen/edit_padding"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/frenchFriesEditText"
        android:layout_width="@dimen/edit_padding"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/shakesEditText"
        android:layout_width="@dimen/edit_padding"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/smallEditText"
        android:layout_width="@dimen/edit_padding"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="6"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/mediumEditText"
        android:layout_width="@dimen/edit_padding"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="7"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/largeEditText"
        android:layout_width="@dimen/edit_padding"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="8"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:layout_row="9"
        android:onClick="orderSummary"
        android:text="@string/place_order" />

</GridLayout>
